定义控件风格

--- a/src/main/res/values/widget_styles.xml
+++ b/src/main/res/values/widget_styles.xml
@@ -20,5 +20,32 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="NTextView" >
+
+    </style>
+
+    <style name="NButton" >
+
+    </style>
+
+    <style name="NCheckBox" >
+
+    </style>
+
+    <style name="NEditText" >
+
+    </style>
+
+    <style name="NImageView" >
+
+    </style>
+
+    <style name="NRatingBar" >
+
+    </style>
+
+    <style name="NProgressBar" >
+
+    </style>
 
 </resources>
