--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -11,8 +11,8 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorPrimary">#fe0000</color>
+    <color name="colorPrimaryDark">#ff0000</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="color_standard">#ff5353</color>
