启动，登录，主框架

--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -11,5 +11,11 @@
   -->
 
 <resources>
+    <dimen name="dimen5">5dp</dimen>
+    <dimen name="dimen15">15dp</dimen>
+    <dimen name="dimen48">48dp</dimen>
+
+    <!--字体大小-->
+    <dimen name="size14">14sp</dimen>
 
 </resources>
