--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -12,10 +12,14 @@
 
 <resources>
     <dimen name="dimen5">5dp</dimen>
+    <dimen name="dimen10">10dp</dimen>
     <dimen name="dimen15">15dp</dimen>
+    <dimen name="dimen30">30dp</dimen>
     <dimen name="dimen48">48dp</dimen>
 
     <!--字体大小-->
+    <dimen name="size12">12sp</dimen>
+    <dimen name="size13">13sp</dimen>
     <dimen name="size14">14sp</dimen>
     <dimen name="size15">15sp</dimen>
     <dimen name="size16">16sp</dimen>
