--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -13,15 +13,23 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#ffffff</color>
-    <color name="colorAccent">#bf050b</color>
+    <color name="colorAccent">#c7000b</color>
 
-    <color name="color_standard">#bf050b</color>
-    <color name="color_auxiliary_cool">#25c2be</color>
-    <color name="color_auxiliary_yellow">#fbb751</color>
-    <color name="color_background">#e5e7ef</color>
-    <color name="color_line">#c3cbd9</color>
+    <color name="color_standard">#c7000b</color>
     <color name="color_ripple">#88000000</color>
     <color name="color_indicator_bg">#88000000</color>
+
+
+    <color name="color_aph">#c7000b</color>
+    <color name="color_aph_yellow">#fe8122</color>
+    <color name="color_aph_green">#2d831c</color>
+    <color name="color_aph_red">#b71c1c</color>
+    <color name="color_aph_title">#333333</color>
+    <color name="color_aph_text">#333333</color>
+    <color name="color_aph_text_secondary">#999999</color>
+    <color name="color_main_unselected">#999999</color>
+    <color name="color_background">#f5f5f5</color>
+    <color name="color_line">#dddddd</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
