--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -14,8 +14,11 @@
     <dimen name="dimen5">5dp</dimen>
     <dimen name="dimen10">10dp</dimen>
     <dimen name="dimen15">15dp</dimen>
+    <dimen name="dimen20">20dp</dimen>
     <dimen name="dimen30">30dp</dimen>
+    <dimen name="dimen40">40dp</dimen>
     <dimen name="dimen48">48dp</dimen>
+    <dimen name="dimen50">50dp</dimen>
 
     <!--字体大小-->
     <dimen name="size12">12sp</dimen>
