--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -14,6 +14,8 @@
     <dimen name="dimen5">5dp</dimen>
     <dimen name="dimen8">8dp</dimen>
     <dimen name="dimen10">10dp</dimen>
+    <dimen name="dimen11">11dp</dimen>
+    <dimen name="dimen12">12dp</dimen>
     <dimen name="dimen15">15dp</dimen>
     <dimen name="dimen20">20dp</dimen>
     <dimen name="dimen30">30dp</dimen>
