--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="dimen40">40dp</dimen>
     <dimen name="dimen48">48dp</dimen>
     <dimen name="dimen50">50dp</dimen>
+    <dimen name="dimen100">100dp</dimen>
     <dimen name="dimen200">200dp</dimen>
     <dimen name="dimen250">250dp</dimen>
 
