--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -19,12 +19,15 @@
     <dimen name="dimen11">11dp</dimen>
     <dimen name="dimen12">12dp</dimen>
     <dimen name="dimen15">15dp</dimen>
+    <dimen name="dimen18">18dp</dimen>
     <dimen name="dimen20">20dp</dimen>
     <dimen name="dimen30">30dp</dimen>
     <dimen name="dimen40">40dp</dimen>
+    <dimen name="dimen45">45dp</dimen>
     <dimen name="dimen48">48dp</dimen>
     <dimen name="dimen50">50dp</dimen>
     <dimen name="dimen100">100dp</dimen>
+    <dimen name="dimen150">150dp</dimen>
     <dimen name="dimen200">200dp</dimen>
     <dimen name="dimen250">250dp</dimen>
 
