--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="dimen150">150dp</dimen>
     <dimen name="dimen200">200dp</dimen>
     <dimen name="dimen250">250dp</dimen>
+    <dimen name="dimen300">300dp</dimen>
 
     <!--字体大小-->
     <dimen name="size12">12sp</dimen>
