--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dimen3">3dp</dimen>
     <dimen name="dimen4">4dp</dimen>
     <dimen name="dimen5">5dp</dimen>
+    <dimen name="dimen7">7dp</dimen>
     <dimen name="dimen8">8dp</dimen>
     <dimen name="dimen10">10dp</dimen>
     <dimen name="dimen11">11dp</dimen>
